# rl-exploration-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
configs/experiments/: amigo_keycorridor.yaml  clip_noveld_keycorridor.yaml  clip_rnd_keycorridor.yaml  count_based_keycorridor.yaml  go_explore_keycorridor.yaml  icm_keycorridor.yaml  l_amigo_keycorridor.yaml  l_noveld_keycorridor.yaml  ngu_keycorridor.yaml  none_keycorridor.yaml  noveld_keycorridor.yaml  ride_keycorridor.yaml  rnd_keycorridor.yaml  semantic_keycorridor.yaml  shelm_oracle_keycorridor.yaml  shelm_rnd_keycorridor.yaml
notebooks/: walkthrough.ipynb
rl_exploration_lab/: __init__.py
rl_exploration_lab/envs/: env_registry.py  language_oracle.py  minigrid_wrapper.py
rl_exploration_lab/evaluation/: evaluator.py  metrics.py  plots.py
rl_exploration_lab/exploration/: amigo.py  base.py  count_based.py  epsilon_greedy.py  icm.py  ngu.py  noveld.py  ride.py  rnd.py  ucb.py
rl_exploration_lab/exploration/go_explore/: archive.py  cell_repr.py  go_explore.py  robustify.py
rl_exploration_lab/exploration/language/: clip_noveld.py  clip_rnd.py  l_amigo.py  l_noveld.py  semantic.py
rl_exploration_lab/exploration/shelm/: memory.py  shelm_oracle.py  shelm_rnd.py
rl_exploration_lab/networks/: dynamics.py  encoders.py  policy.py  predictors.py
rl_exploration_lab/training/: ppo.py  rollout.py  trainer.py
scripts/: evaluate.py  plot_results.py  train.py
tests/: test_exploration.py  test_language_methods.py  test_phase2_methods.py
