[project]
name = "rl-exploration-lab"
version = "0.1.0"
description = "A comprehensive library of RL exploration methods with unified evaluation on MiniGrid environments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Áron Szűcs"},
]
keywords = ["reinforcement-learning", "exploration", "minigrid", "rnd", "curiosity", "go-explore"]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "minigrid>=2.3",
    "gymnasium>=0.29",
    "pyyaml>=6.0",
    "tensorboard>=2.14",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
clip = [
    "transformers>=4.30",
    "open-clip-torch>=2.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
